Render Engine still saves a render result to disk if it reports an error #30512

Closed
opened 2012-03-10 23:00:27 +01:00 by Martin Poirier · 3 comments
Member

%%%When a render engine reports an error, a result file is still saved to disk. This happens even if the render engine raises a Python exception.

Attached, you'll find a very simple render engine that can be dropped in your addons folder and enabled as usual (it is called TEST RENDER).
The blend file is a simple empty file with that engine already selected and set to render 25 frames and save in the same directory as the blend.

The bug is easy to test with background render, just run:

  blender -b test.blend -E TEST_RENDER -a

But can also be tested in the UI by hitting Ctrl-F12 or Render -> Animation in the header menu.

The desired behaviour is of course that nothing be written to disk if an error occurs.%%%

%%%When a render engine reports an error, a result file is still saved to disk. This happens even if the render engine raises a Python exception. Attached, you'll find a very simple render engine that can be dropped in your addons folder and enabled as usual (it is called TEST RENDER). The blend file is a simple empty file with that engine already selected and set to render 25 frames and save in the same directory as the blend. The bug is easy to test with background render, just run: ``` blender -b test.blend -E TEST_RENDER -a ``` But can also be tested in the UI by hitting Ctrl-F12 or Render -> Animation in the header menu. The desired behaviour is of course that nothing be written to disk if an error occurs.%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fix in svn, thanks for the report and test files :)%%%

%%%Fix in svn, thanks for the report and test files :)%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#30512
No description provided.