Fix #30512: external render saved render result after reporting error.