source/blender/blenkernel/intern/report.c
@@ -37,7 +37,6 @@
 #include "BKE_report.h"
 #include "BKE_global.h" /* G.background only */
 
-
 #include <stdarg.h>
 #include <stdio.h>
 #include <string.h>
@@ -264,12 +263,24 @@ void BKE_reports_print(ReportList *reports, ReportType level)
 
 Report *BKE_reports_last_displayable(ReportList *reports)
 {
-	Report *report=NULL;
+	Report *report;
 	
-	for (report= (Report *)reports->list.last; report; report=report->prev) {
+	for (report= reports->list.last; report; report=report->prev) {
 		if (ELEM3(report->type, RPT_ERROR, RPT_WARNING, RPT_INFO))
 			return report;
 	}
 	
 	return NULL;
 }
+
+int BKE_reports_contain(ReportList *reports, ReportType level)
+{
+	Report *report;
+
+	for(report=reports->list.first; report; report=report->next)
+		if(report->type >= level)
+			return TRUE;
+	
+	return FALSE;
+}
+
